# Estimate-Power-Plant-Hours

./: README.md  pyproject.toml
hours_calculator/: main.py  test_main.py
