[project]
name = "hours_calculator"
version = "0.1.0"
description = "A software program which will return (separately) the total number of peak andnon-peak hours on any given month"
authors = [
    {name = "yc91",email = "idazorz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
